fix selecter z-index for IE7

--- a/morelesszen_starterkit/css/form.less
+++ b/morelesszen_starterkit/css/form.less
@@ -117,6 +117,9 @@ select {
 
 .webform-component-select {
   position: relative;
+  .ie7 & {
+    position: static;
+  }
 }
 
 .selecter {
